# qupath-extension-DL-pixel-classifier

./: .gitignore  QUICKSTART.md  README.md  build.gradle.kts  setup_server.bat  setup_server.sh
.github/workflows/: notify-catalog.yml
docs/: APPOSE_DEV_GUIDE.md  BEST_PRACTICES.md  INFERENCE_GUIDE.md  INSTALLATION.md  PARAMETERS.md  PREFERENCES.md  SCRIPTING.md  TINY_MODEL.md  TIPS_AND_TRICKS.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md
python_server/: README.md  pyproject.toml
python_server/dlclassifier_server/: __init__.py  main.py
python_server/dlclassifier_server/routers/: health.py  inference.py  models.py  pretrained.py  training.py
python_server/dlclassifier_server/services/: __init__.py  gpu_manager.py  inference_service.py  job_manager.py  mae_pretraining.py  model_registry.py  muvit_model.py  pretrained_models.py  ssl_pretraining.py  training_service.py
python_server/dlclassifier_server/utils/: batchrenorm.py  normalization.py
python_server/tests/: __init__.py  conftest.py  generate_test_data.py  run_integration_steps_2_4.py  test_api_endpoints.py  test_gpu_manager.py  test_inference_service.py  test_integration_pipeline.py  test_training_service.py
scripts/examples/: 01_basic_classification.groovy  02_batch_classification.groovy  03_server_status.groovy  04_export_training_data.groovy  05_utility_methods.groovy  06_export_brightfield_training_tiles.groovy
src/main/java/qupath/ext/dlclassifier/: BuildInfo.java  DLClassifierChecks.java  SetupDLClassifier.java
src/main/java/qupath/ext/dlclassifier/classifier/: ClassifierHandler.java  ClassifierRegistry.java
src/main/java/qupath/ext/dlclassifier/controller/: DLClassifierController.java  InferenceWorkflow.java  ModelManagementWorkflow.java  TrainingWorkflow.java
src/main/resources/qupath/ext/dlclassifier/: pixi.toml
tools/: migrate_metadata.py
(+79 files in other folders)
